# hepatic-vascular-resilience

hepatic-vascular-resilience/: ARCHITECTURE.md  CHANGELOG.md  README.md  pyproject.toml
hepatic-vascular-resilience/docs/: METHODS_PRIORITY1.md
hepatic-vascular-resilience/notebooks/: 01_priority1_demo.ipynb
hepatic-vascular-resilience/src/hepatic_vascular_twin/: __init__.py
hepatic-vascular-resilience/src/hepatic_vascular_twin.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
hepatic-vascular-resilience/src/hepatic_vascular_twin/experiments/: __init__.py  synthetic_tests.py  validation.py
hepatic-vascular-resilience/src/hepatic_vascular_twin/graph/: __init__.py  graph_metrics.py  spectral_analysis.py  synthetic_networks.py  vascular_graph.py
hepatic-vascular-resilience/src/hepatic_vascular_twin/resilience/: __init__.py  hvri.py  perturbation.py
hepatic-vascular-resilience/src/hepatic_vascular_twin/topology/: __init__.py  filtration.py  persistence.py  topological_features.py
hepatic-vascular-resilience/src/hepatic_vascular_twin/visualization/: __init__.py  dashboard.py  plots.py
hepatic-vascular-resilience/tests/: __init__.py  test_graph.py  test_resilience.py  test_synthetic_networks.py  test_topology.py
