[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hepatic-vascular-twin"
version = "0.1.0"
description = "Hepatic Vascular Resilience Digital Twin (HVR-DT) — Priority 1 synthetic prototype"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "HVR-DT Contributors" }]
keywords = ["hepatic", "vascular", "resilience", "topology", "graph-theory"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "networkx>=3.0",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "gudhi>=3.8",
    "ripser>=0.6",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "jupyter>=1.0",
    "ipykernel>=6.25",
    "black>=24.0",
    "ruff>=0.1",
    "mypy>=1.8",
]

[project.urls]
Documentation = "https://github.com/example/hepatic-vascular-resilience#readme"
Repository = "https://github.com/example/hepatic-vascular-resilience"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
